# autocapture

./: .gitignore  LICENSE  README.md  analyze.py  analyze_experiment.py  analyze_trial.py  capture_history_utils.py  config.py  estimate.py  jolly_seber.py  kery_translation.py  miss_id.py  pixi.toml  popan.py  pyproject.toml  read_inp.py  requirements.txt  run_experiment.py  simulate.py  simulate_experiment.py  test_cjs.py  test_jollyseber.py  test_missid.py  test_popan.py  test_pytest.py  test_simulate.py  test_utils.py  utils.py  write_configs.py
config/: config.py  debug.yaml  default.yaml  dry-run.yaml  fully-blue_whale-1.yaml  fully-bottlenose_dolphin-0.yaml  fully-bottlenose_dolphin-1.yaml  fully-bottlenose_dolphin-3.yaml  fully-false_killer_whale-0.yaml  fully-false_killer_whale-1.yaml  fully-frasiers_dolphin-0.yaml  fully-humpback_whale-0.yaml  fully-humpback_whale-1.yaml  fully-killer_whale-0.yaml  fully-killer_whale-1.yaml  fully-melon_headed_whale-0.yaml  fully-minke_whale-0.yaml  fully-minke_whale-1.yaml  fully-pygmy_killer_whale-0.yaml  fully-sei_whale-0.yaml  fully-short_finned_pilot_whale-2.yaml  fully-spotted_dolphin-0.yaml
input/: catalog_ids.npy  dipper.csv  fully-automated-rates.csv  fully-rates.csv  rates.csv  semi5-rates.csv  test-rates.csv  write_error_rates.py
slurm/: analyze_fully.slurm  analyze_semi5.slurm  analyze_test.slurm  estimate_semi5.slurm  estimate_test.slurm  fully.slurm  fully.slurm.txt  semi5.slurm  test.slurm
src/: analyze.py  check.py  cjs.py  config.py  estimate.py  miss_id.py  model.py  popan.py  simulate.py  utils.py
(+164 files in other folders)
