[project]
dependencies = ['pymc', 'autocapture']
name = "autocapture"
version = "0.1.0"
description = "Optimizing photo identification for population assessments."
authors = [
    {name='Philip T. Patton', email='pattonp@hawaii.edu'}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system] 
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.urls]
Homepage = "https://github.com/philpatton/autocapture"

